[package]
name = "sbitty"
version = "0.1.0"
authors = ["Robin Biscay <biscay.rob@gmail.com"]
edition = "2018"
description = "library defining bitwise operations on standard integers type"
license = "MIT"
#readme = "README.md"
homepage = "https://github.com/BiscayRobin/sbitty"
repository = "https://github.com/BiscayRobin/sbitty"
keywords = ["library","bitwise","operations","integers"]

[dependencies]